--- a/frontend/src/CSS/CreatingConstruction.css
+++ b/frontend/src/CSS/CreatingConstruction.css
@@ -18,25 +18,6 @@
   margin-left: -600px;
 }
 
-/* .modal-create-site {
-  background: rgba(217, 217, 217, 0.5);
-  backdrop-filter: blur(12.5px);
-  margin-left: 700px;
-  margin-top: 100px;
-  padding: 20px;
-  width: 500px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  border: #060332 2px solid;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.modal-create-site label {
-  color: black;
-} */
-
 .modal-create-site {
   background: rgba(217, 217, 217, 0.50);
   backdrop-filter: blur(12.5px);
@@ -120,7 +101,6 @@
   background-color: #c0392b;
 }
 
-/* Adjust for smaller screens */
 @media (max-width: 768px) {
   .modal-create-site {
     width: 90%;
@@ -141,25 +121,9 @@
   }
 }
 
-/* @media (max-width: 768px) {
-  .modal-create-site {
-    width: 90%;
-  }
-  .modal-create-site .row input[type="text"],
-  .modal-create-site .row input[type="date"],
-  .modal-create-site .row input[type="number"],
-  .modal-create-site .row input[type="file"] {
-    width: 100%;
-    margin-right: 0;
-  }
-} */
-
-
-/* blocks site */
 .site-blocks {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /* flex-wrap: wrap; */
   gap: 30px;
   margin-left: 320px;
   text-align: left;
@@ -172,7 +136,6 @@
   border-radius: 10px;
   width: 350px;
   padding: 30px;
-  /* width: calc(33.33% - 20px); */
   box-sizing: border-box;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -180,7 +143,6 @@
 .site-location {
   display: flex;
   align-items: center;
-  /* margin-left: 40px; */
   margin-top: -20px;
   font-size: 1.5em;
   margin-bottom: 10px;
@@ -189,7 +151,6 @@
 
 .location-icon {
   font-size: 1.5em;
-  /* margin-right: 10px; */
 }
 
 .site-details {
@@ -212,16 +173,16 @@
 }
 
 .overlay {
-  position: fixed; /* Ensure the overlay covers the full screen */
+  position: fixed; 
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-  display: flex; /* Align children (modal) to center */
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  z-index: 1000; /* Ensure it's above all other elements */
+  background-color: rgba(0, 0, 0, 0.5); 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  z-index: 1000; 
   margin-left: 250px;
 }
 
