--- a/frontend/src/CSS/EstimationDownload.css
+++ b/frontend/src/CSS/EstimationDownload.css
@@ -5,24 +5,24 @@
   
   .EstimationDownload {
     display: flex;
-    flex-wrap: wrap; /* Allow items to wrap to the next row */
-    justify-content: center; /* Align the items in the center horizontally */
-    gap: 20px; /* Add space between blocks */
+    flex-wrap: wrap; 
+    justify-content: center; 
+    gap: 20px; 
     padding: 20px;
-    width: 1220px; /* Full width of the screen */
+    width: 1220px; 
     box-sizing: border-box;
-    margin-left:310px; /* Center the container horizontally */
+    margin-left:310px; 
   }
   
   .basic-info-block {
-    flex: 0 0 calc(33.33% - 40px); /* Each block takes 1/3 of the row minus gaps */
+    flex: 0 0 calc(33.33% - 40px); 
     border: 1px solid #3be24c;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
     text-align: center;
-    height: 290px; /* Fixed height */
+    height: 290px; 
     background-color: transparent;
   }
   
@@ -57,16 +57,15 @@
   }
   
   
-  /* Optional responsiveness: Adjust the layout for smaller screens */
   @media (max-width: 768px) {
     .basic-info-block {
-      width: calc(50% - 20px); /* 2 blocks per row on medium screens */
+      width: calc(50% - 20px); 
     }
   }
   
   @media (max-width: 480px) {
     .basic-info-block {
-      width: calc(100% - 20px); /* 1 block per row on small screens */
+      width: calc(100% - 20px); 
     }
   }
   
