--- a/frontend/src/CSS/Material.css
+++ b/frontend/src/CSS/Material.css
@@ -1,5 +1,4 @@
 * {
-    /* background: linear-gradient(to right, #060606, #060332); */
     color: white;
     overscroll-behavior: none;
 
@@ -74,13 +73,10 @@ border: 2px solid rgba(190, 202, 216, 0.514);
   height: 120px;
 }
 
-
-
-/* Editable input field */
 .Material-cement-edit, .Material-brick-edit, .Material-sand-edit,
 .Material-steel-edit, .Material-mixture-edit, .Material-plumbing-edit
  {
-  all: unset; /* Resets all styles */
+  all: unset; 
   font-size: 1.2rem;
   text-align: center;
   border-radius: 20px;
@@ -117,10 +113,10 @@ border: 2px solid rgba(190, 202, 216, 0.514);
     height: 20px;
   }
   .badge-qty-input {
-    width: 40px; /* Adjust width to fit values */
-    height: 24px; /* Match the icon height */
+    width: 40px; 
+    height: 24px; 
     font-size: 14px;
-    text-align: center; /* Center-align text */
+    text-align: center; 
     outline: none;
     padding: 2px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -133,21 +129,19 @@ border: 2px solid rgba(190, 202, 216, 0.514);
     color: #cccccc;
   }
 
-/* Modal Overlay */
 .material-content-modal {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  background: rgba(0, 0, 0, 0.5); 
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 1000;
 }
 
-/* Modal Content */
 .material-modall-content {
   background: white;
   padding: 20px;
@@ -157,7 +151,6 @@ border: 2px solid rgba(190, 202, 216, 0.514);
   position: relative;
 }
 
-/* Close Button */
 .material-closee-modal {
   position: absolute;
   top: 10px;
@@ -172,7 +165,6 @@ border: 2px solid rgba(190, 202, 216, 0.514);
   color: red;
 }
 
-/* Button */
 .material-button {
   cursor: pointer;
 }
