--- a/frontend/src/CSS/Members.css
+++ b/frontend/src/CSS/Members.css
@@ -1,34 +1,16 @@
 
 
 * {
-    /* background: linear-gradient(to right, #060606, #060332); */
     color: white;
     overscroll-behavior: none;
-    /* border: 1px solid red; */
 }
 
 .MainScreens {
     display: flex;
-    /* justify-content: center; */
-    /* align-items: center; */
     flex-direction: column;
     background: linear-gradient(to right, #060606, #060332);
     height: 100%;
 }
-
-  /* .sidepanel{
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    margin-top: 0px;
-    margin-left: 0px;
-    width: 300px;
-    height: 620px;
-    border: 3px solid white;
-    background: linear-gradient(to right, #060606, #060332);
-    border-radius: 10px;
-
-  } */
 
 .members-container{
     margin-left: 283px;
@@ -51,7 +33,7 @@
     font-size: 22px;
     font-style: italic;
     font-weight: 600;
-    line-height: 40px; /* 166.667% */
+    line-height: 40px; 
 }
 .Line{
     width: 1150px;
@@ -73,7 +55,7 @@
   
   .search-bar2 input {
     width: 100%;
-    padding: 10px 40px 10px 10px; /* Space for the button */
+    padding: 10px 40px 10px 10px; 
     border: 1px solid #ccc;
     border-radius: 20px;
     font-size: 16px;
@@ -94,10 +76,6 @@
   .search-bar2 button:hover {
     color: #000;
   }
-
-
-
-
 
   .table-container {
     width: 1100px;
@@ -206,13 +184,13 @@
     gap: 5px;
     margin-left: 1050px;
     margin-top: -60px;
-    border: 2px solid white; /* White border */
-    color: white; /* White text color */
+    border: 2px solid white; 
+    color: white; 
     padding: 8px 16px;
-    border-radius: 4px; /* Optional: rounded corners */
+    border-radius: 4px; 
     display: flex;
     align-items: center;
-    gap: 8px; /* Space between icon and text */
+    gap: 8px; 
     border-radius: 20px;
 }
 
@@ -226,17 +204,14 @@
   padding: 5px;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
-  margin-bottom: 10px; /* Space between rows */
+  margin-bottom: 10px; 
 }
 .form-group input{
   margin-right: 80px ;
-  /* align-items: center; */
   border-radius: 5px;
   border: 1px solid #000;
   background: #D9D9D9;
   margin-left: 100px;
-  /* text-align: left; */
   flex: 1;
   padding: 5px;
   width: 400px;
@@ -248,26 +223,22 @@
   font-size: 20px;
   font-style: normal;
   font-weight: 600;
-  line-height: 150%; /* 30px */
-  width: 150px; /* Adjust as needed */
+  line-height: 150%; 
+  width: 150px;
   text-align: left;
   margin-left: 50px;
 }
 .modal-title{
   color: white;
-  /* text-align: center; */
   margin-left: 50px;
   font-size: 25px;
   font-style: italic;
   font-weight: 700;
-  line-height: 150%; /* 37.5px */
+  line-height: 150%; 
   letter-spacing: -0.275px;
 }
 
  .modal-overlay {
-  /* position: fixed; */
-  /* top: 0;
-  left: 0; */
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -275,9 +246,6 @@
 }
 
 .modal-content {
-  /* position: fixed;
-  top: 50%;
-  left: 50%; */
   transform: translate(-50%, -50%);
   margin-top: -250px;
   background: white;
@@ -285,7 +253,6 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 1100;
-  /* width: 600px; */
   margin-left: 800px;
 } 
 
