--- a/frontend/src/CSS/Password.css
+++ b/frontend/src/CSS/Password.css
@@ -28,7 +28,7 @@
     background-color: #ffffff42;
     width: 100%;
     max-width: 400px;
-    box-sizing: border-box; /* To include padding in width calculation */
+    box-sizing: border-box; 
     margin-bottom: 20px;
     transition: border-color 0.3s ease;
     margin-left: 100px;
@@ -36,9 +36,8 @@
 
 }
 
-  /* Error message styling */
   .error-message {
-    color: #f44336; /* Red color for error */
+    color: #f44336; 
     font-size: 16px;
     margin-top: 15px;
     font-weight: 500;
@@ -58,7 +57,6 @@
     margin-top: 30px;
   }
 
-   /* Button hover effect */
    .submit-btn:hover {
     background-color: #45a049;
   }
