--- a/frontend/src/CSS/Register.css
+++ b/frontend/src/CSS/Register.css
@@ -1,38 +1,35 @@
-/* Container for video and form */
 .register-video-controls {
-    position: relative; /* Ensures the content can layer above the video */
+    position: relative; 
     width: 100%;
     height: 730px;
     overflow: hidden;
 }
 
 input::placeholder {
-    color: white; /* Set placeholder color */
-    opacity: 1; /* Optional: Adjust transparency */
+    color: white; 
+    opacity: 1; 
   }
 
-/* Video styles */
 .register-styled-videos {
-    position: absolute; /* Makes the video fill the container */
+    position: absolute; 
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); /* Centers the video */
-    min-width: 100%; /* Ensures the video covers the width */
-    min-height: 100%; /* Ensures the video covers the height */
-    object-fit: cover; /* Avoids distortion */
-    z-index: -1; /* Sends the video to the background */
+    transform: translate(-50%, -50%); 
+    min-width: 100%; 
+    min-height: 100%; 
+    object-fit: cover; 
+    z-index: -1; 
 }
 
-/* Form styles */
 .Register-form {
-    position: absolute; /* Positions the form relative to the parent */
-    top: 50%; /* Centers the form vertically */
-    left: 50%; /* Centers the form horizontally */
-    transform: translate(-50%, -50%); /* Centers it properly */
-    color: white; /* Makes the text stand out against the video */
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    color: white; 
     font-size: 2rem;
     text-align: center;
-    z-index: 1; /* Ensures it appears above the video */
+    z-index: 1; 
     width: 659px;
     height: 510px;
     flex-shrink: 0;
