--- a/frontend/src/CSS/SplashScreen.css
+++ b/frontend/src/CSS/SplashScreen.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    z-index: 9999; /* Ensure the splash screen is on top */
+    z-index: 9999; 
   }
   
   .SplashScreen video {
@@ -15,6 +15,6 @@
     transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensures the video covers the screen without distorting its aspect ratio */
+    object-fit: cover; 
   }
   
